--- a/pages/.vitepress/theme/base.css
+++ b/pages/.vitepress/theme/base.css
@@ -34,10 +34,11 @@ pre {
   /* color: rgb(205, 171, 83); */
   padding: 16px;
   border-radius: 5px;
-  box-shadow: rgba(0, 0, 0, 0.55) 0px 20px 68px 0px;
+  box-shadow: rgba(0, 0, 0, 0.55) 0px 10px 18px 0px;
   font-size: 16px;
   font-family: monospace;
   white-space: pre-wrap;
+  margin: 40px 0;
 }
 
 pre span {
